--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.7",
+    "csstype": "^3.1.3",
     "fuse.js": "^7.0.0",
     "hls.js": "^1.5.8",
     "jwt-decode": "^4.0.0",
@@ -24,16 +25,17 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.0",
-    "song-parser": "../../song-parser",
+    "song-parser": "../text-parser",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start:windows": "set HTTPS=true&&react-scripts start",
+    "start:linux": "HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "create-swagger-api": "openapi-generator-cli generate -i https://localhost:3001/swagger.json -g typescript-axios -o src/api/generated"
+    "create-swagger-api": "openapi-generator-cli generate -i http://localhost:3001/swagger.json -g typescript-axios -o src/api/generated"
   },
   "eslintConfig": {
     "extends": [
