--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.0",
-    "song-parser": "../text-parser",
+    "song-parser": "git@github.com:kubiakszymonp/text-parser",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
