--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.0",
     "socket.io-client": "^4.7.5",
-    "song-parser": "git@github.com:kubiakszymonp/text-parser",
+    "text-parser": "git@github.com:kubiakszymonp/text-parser",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
