--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Rzutnik",
-  "name": "Rzutnik",
+  "short_name": "Projektor",
+  "name": "Projektor",
   "icons": [
     {
       "src": "favicon.ico",
