--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start:windows": "set HTTPS=true&&react-scripts start",
-    "start:linux": "HTTPS=true react-scripts start",
+    "start:windows": "react-scripts start",
+    "start:linux": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
